--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,7 +6,7 @@
 }
 
 .container {
-  inset-block-start: 0;
+  top: 0;
   position: fixed;
   height: constants.$navbar-height;
   width: 100%;
